--- a/02/index.html
+++ b/02/index.html
@@ -5,7 +5,7 @@
     <title>Aaron 웹 개발 입문</title>
   </head>
   <body>
-    <h1>Aaron 웹 개발 기초</h1>
+    <h1>Aaron 웹 개발 기초.. 현재 연습중입니다. </h1>
     <p>HTML</p>
     <p>CSS</p>
     <p>자바스크립트</p>
